# ExtendEval

./: .gitignore  CMakeLists.txt  README.md
inc/: ExtendEval.h  pipeServer.h
pipe_server/: Cargo.toml  README.md
pipe_server/src/: lib.rs
res/: ExtendEval.aps  ExtendEval.r  ExtendEval.rc  ExtendEval.rr  ExtendEval.rrc
script/: test.ps1
src/: ExtendEval.cpp  ExtendEval.r  pipeServer.cpp
